[package]
name = "hlk_ld6002"
version = "0.1.0"
edition = "2021"
description = "A library for interfacing with the HLK-LD6002 respiratory and heartbeat radar module"

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
binrw = { version = "0.13.3", default-features = false }

[dev-dependencies]
binrw = { version = "0.13.3", features = ["std"] }
serialport = "4.3.0"
termion = "3.0.0"