[package]
name = "hlk_ld6002"
version = "0.1.0"
edition = "2021"
description = "A library for interfacing with the HLK-LD6002 respiratory and heartbeat radar module"

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
embedded-io = "0.6.1"
num_enum = { version = "0.7.2", default-features = false }

[dev-dependencies]
embedded-io-adapters = { version = "0.6.1", features = ["std"] }
serialport = "4.3.0"
termion = "3.0.0"